--- a/style.css
+++ b/style.css
@@ -3,7 +3,23 @@ body {
 }
 
 p, h1{
-    font-family: Helvetica;
+    font-family: Tahoma, Geneva, sans-serif;
     color: white;
     text-align: center;
+}
+
+div {
+    margin: auto;
+    display: block;
+    padding-top: 20%
+}
+
+a {
+    color: white;
+    text-decoration: none
+}
+
+a:hover {
+    background-color: white;
+    color: blue;
 }
